# sflvault

./: .codeclimate.yml  .coveragerc  .flake8  .gitignore  .sflakes  .travis.yml  CHANGELOG.txt  CMakeLists.txt  DEPENDS.txt  INSTALL  INSTALL.txt  MAINTAINER  MANIFEST.in  Makefile  Pipfile  README  README.md  README.rst  README.txt  UPGRADE.txt  buildout.cfg  channels.scm  development.ini  enter-dev-env.sh  install-client.sh  install-server.sh  manifest.scm  pydist-overrides  requirements.freeze  requirements.tests.freeze  setup.cfg  setup.py  sflvault-client-qt4.py  sflvault-qt4.pro  sflvaultclientqt4.py  test.env  test.ini  tox.ini
SFLvault.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  paste_deploy_config.ini_tmpl  requires.txt
auth/: auth.py
bash-complete/: sflvault-complete
build-scripts/: functions.mk  pydist-overrides  rpm-insert-to-specs.awk
client/: CHANGES.txt  distribute_setup.py  setup.cfg  setup.py  specs.append  stdeb.cfg
client-qt/: .gitignore  CMakeLists.txt  MANIFEST.in  setup.py  sflvault-client-qt.desktop  specs.append  stdeb.cfg
client-qt/debian/: changelog  control  rules
client-qt/i18n/: sflvault-qt4.ts  sflvault-qt4_en.qm  sflvault-qt4_en.ts  sflvault-qt4_fr.qm  sflvault-qt4_fr.ts
client-qt/images/: .directory
client-qt/lib/: auth.py  error.py
client-qt/sflvault_qt/: mainWindow.py
client/SFLvault_client.egg-info/: .gitignore
client/debian/: changelog  control
cmake/files/: sflvault-client-qt4  sflvault-qt.desktop
cmake/modules/: FindPyQt4.cmake
common/: CHANGES.txt  setup.py  specs.append  stdeb.cfg
common/debian/: changelog  control  rules
debian/: changelog  control  gbp.conf  rules
docs/: DEPENDS.txt  Makefile  README  README.txt  TODO.txt  index.txt
docs/logos/: sflvault-logo-tagline.xcf
docs/sphinxsrc/: architecture.txt  commands.txt  conf.py  features.txt  index.txt  install.rst  install.txt  permissions.txt  usermanual.txt  utils.txt  vaultaccess.txt
i18n/: sflvault-qt4.ts  sflvault-qt4_fr.ts
images/: qicons.py
lib/: auth.py  error.py
plugin-demo/: .gitignore  setup.py
scripts/: sflvault.py
server/: CHANGES.txt  DEVELOPER  MAINTAINER  MANIFEST.in  README.txt  UPGRADE.txt  development-example.ini  development.ini  setup.cfg  setup.py  sflvault-server.service  sflvault-test.db  sflvault.db  sflvault.py  specs.append  stdeb.cfg  test-config-user  test-example.ini  test.ini  xtest.ini
server/SFLvault_server.egg-info/: .gitignore  paste_deploy_config.ini_tmpl
server/sflvault/: .tests.py.swp  __init__.py  models.py  server.py  sflvault.py  views.py  websetup.py
server/sflvault.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
sflvault/: __init__.py  client.py  websetup.py
sflvault/api/: api.py  api_connector.py
sflvault/client/: __init__.py  client.py  commands.py  fallback.py  remoting.py  services.py  ui.py  utils.py
sflvault/config/: config.py  environment.py  middleware.py
sflvault/controllers/: xmlrpc.py
sflvault/encryption/: base.py  rsa.py
sflvault/lib/: base.py  crypto.py  fishlib.py  vault.py
sflvault/migrate/: 06-to-07.py  0727-073.py
sflvault/model/: __init__.py  meta.py
sflvault/services/: customer.py  service.py  service_group.py
sflvault/tests/: __init__.py
sflvault/users/: account.py  account_group.py
sflvault_qt/: mainWindow.py
sflvault_qt/bar/: filterbar.py  menubar.py  osd.py  systray.py
sflvault_qt/config/: config.py  config.py.back  customer.py  groups.py  machine.py  preferences.py  protocols.py  service.py  users.py
sflvault_qt/dialog/: progressdialog.py  webpreview.py
sflvault_qt/docks/: aliasdock.py  customerdock.py  favoritedock.py  infodock.py  (+3 more)
tests/: __init__.py  coverage.conf  hudson_script.sh  preparetests.sh  runtests.sh  test-certif-config  test.ini
(+103 files in other folders)
